changed project structure, refactoring