@@ -1,14 +1,14 @@
-package com.tictactoe;
+package com.tictactoe.model;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-public class Field {
+public class Game {
     private final Map<Integer, Sign> field;
 
-    public Field() {
+    public Game() {
         field = new HashMap<>();
         field.put(0, Sign.EMPTY);
         field.put(1, Sign.EMPTY);
@@ -54,7 +54,7 @@ public class Field {
         for (List<Integer> winPossibility : winPossibilities) {
             if (field.get(winPossibility.get(0)) == field.get(winPossibility.get(1))
                 && field.get(winPossibility.get(0)) == field.get(winPossibility.get(2))) {
-                return field.get(winPossibility.get(0));
+                return field.get(winPossibility.getFirst());
             }
         }
         return Sign.EMPTY;
